# cli

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.FOD.md  README.FoD.md  README.md  SECURITY.md  UPGRADE-2.0.md  go.mod  go.sum  output.txt
.github/workflows/: codescene.yml  codesee-arch-diagram.yml  debricked.yml  docker.yml  release.yml  soot.yml  test.yml
cmd/debricked/: main.go
examples/templates/: README.md
internal/auth/: auth.go  auth_test.go  callback.go  callback_test.go
internal/callgraph/: README.md  generation.go  generation_test.go  generator.go  generator_test.go  scheduler.go  scheduler_test.go
internal/ci/: ci.go  service.go  service_test.go
internal/client/: deb_client.go  deb_client_test.go  request.go  request_test.go  retry_test.go
internal/debug/: debug.go  debug_test.go
internal/embedded/: supported_formats.json
internal/experience/: experience.go
internal/file/: default_exclusion.go  default_exclusion_test.go  exclusion.go  exclusion_test.go  finder.go  finder_test.go  fingerprint.go  fingerprint_test.go  format.go  format_test.go  group.go  group_test.go  groups.go  workspace.go  (+2 more)
internal/resolution/pm/uv/testdata/: pyproject.toml
scripts/: check_coverage.sh  download.sh  fetch_supported_formats.sh  install.sh  test.sh  test_cli.sh  test_docker.sh  test_docker_scripts.sh  test_e2e.sh  test_e2e_callgraph_java_version.sh  test_gosec.sh  test_lint.sh  test_static.sh
test/: checkFilesResolved.sh  test_e2e_pip.sh
(+767 files in other folders)
